[project]
name = "connect4-rl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.24",
    "stable-baselines3>=2.4",
    "torch>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["connect4_env", "play", "arena", "minimax_player"]
